# thin-obj-wrappers

./: .gitignore  README.md  requirements.txt
bash/: run_depth_nerfacto.sh  (+9 more)
external_src/monocular_depth/UniK3D/: .gitignore  README.md  app.py  gradio_demo.py  hubconf.py  pyproject.toml
external_src/monocular_depth/UniK3D/assets/demo/: dl3dv.json  equirectangular.json  kitti360.json  scannet.json
external_src/monocular_depth/UniK3D/configs/eval/: vitb.json  vitl.json  vits.json
external_src/monocular_depth/UniK3D/configs/train/: vitb.json  vitl.json  vits.json
external_src/monocular_depth/UniK3D/docs/: eval.md  train.md
external_src/monocular_depth/UniK3D/scripts/: demo.py  eval.py  infer.py
external_src/monocular_depth/UniK3D/unik3d/: __init__.py
external_src/monocular_depth/UniK3D/unik3d/datasets/: _2d3ds.py  _4dor.py  __init__.py  a2d2.py  adt.py  aimotive.py  argoverse.py  argoverse2.py  arkit.py  ase.py  base_dataset.py  bdd.py  bedlam.py  behave.py  blendedmvg.py  cityscape.py  ddad.py  deep360.py  dense.py  diml.py  diode.py  dl3dv.py  driving_stereo.py  dtu_rmvd.py  dynamic_replica.py  eden.py  eth3d.py  facedepth.py  flsea.py  futurehouse.py  gibson.py  hammer.py  hm3d.py  hoi4d.py  hypersim.py  ibims.py  image_dataset.py  ken_burns.py  kitti.py  kitti360.py  (+36 more)
external_src/monocular_depth/UniK3D/unik3d/layers/: __init__.py  attention.py  convnext.py  grad_choker.py  misc.py  mlp.py  positional_encoding.py  upsample.py
external_src/monocular_depth/UniK3D/unik3d/models/: __init__.py  camera_augmenter.py  decoder.py  encoder.py  export.py  unik3d.py
(+354 files in other folders)
